tdf#78902 VML import: workaround for extreme top margin

Regression from commit 2b78f2cd7b9e4bab0f3b3b9119238f36a1bbc7b2 (rhbz#988516:
DOCX import: fix context stack when importing header/footer, 2014-03-05),
though that just made an existing Writer layout problem visible.

RTF/WW8/newer (drawingML) DOCX import doesn't have this problem, as those
import pictures as sw graphics, not draw ones.

<w10:wrap type="through"/> is normally mapped to our page wrap (as it uses
"through" in the "not only wrap around, but also in the holes of the shape, if
it has any" context, not in our "text should go through it, so no wrapping"
one), but for some reason in this case (most probably due to the extreme large
negative margins) Word handles the situation as our through, i.e. the text
should not go to the second page, as it would normally happen with a "Word
through" wrapping.

Work around the strange situation by ignoring the wrapping request for extreme
top margin values.

Change-Id: I20555b1fa7a769e20c40a3a5ff3873807403e937